src/styles/style.css
/* GLOBAL */
* {
  font-family: system-ui;
  scroll-behavior: smooth;
  scrollbar-width: none;
  cursor: none;
}

/* BODY */
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  user-select: none;
  margin: 0;
  color: #f2f2f2;
  background-color: #131313;
}

/* LINKS */
a {
  text-decoration: none;
  color: #bbbbbb;
}

/* HEADER */
header {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50px;
  width: 500px;
  position: fixed;
  top: 20px;
  background-color: rgba(225, 225, 225, 0.04);
  border: 1px solid rgba(225, 225, 225, 0.1);
  border-radius: 50px;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  z-index: 1;
}

nav ul {
  display: flex;
  list-style: none;
  padding: 0;
  gap: 40px;
}

nav a {
  font-size: 17px;
  font-weight: 600;
  transition: .3s ease-in-out;
}

nav a:hover,
nav a:focus {
  color: #f2f2f2;
}

/* MAIN INFO */
.main-info {
  display: flex;
  justify-content: space-between;
  gap: 100px;
  margin: 96px 0;
}

.text-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
}

.text-div span {
  font-family: monospace;
  font-size: 64px;
  line-height: 1.2;
}

.text-div p {
  font-family: monospace;
  font-size: 18px;
  line-height: 1.6;
  color: #bbbbbb;
}

.picture-div img {
  height: 400px;
  width: 400px;
  opacity: 0.9;
}

/* MAIN */
main {
  max-width: 1200px;
  padding: 0 25px 25px;
}

main p {
  font-size: 16px;
  line-height: 1.6;
  color: #bbbbbb;
}

main a {
  color: #bc35ff;
  font-weight: bold;
  text-decoration: underline;
  text-underline-offset: 2px;
}

main a:hover {
  text-decoration: none;
}

/* MARGINS */
.skills-heading,
.projects-heading,
.connect-heading {
  margin-top: 120px;
}

/* COLORS */
.project, .skills p, section {
  background-color: rgba(225, 225, 225, 0.02);
  border: 1px solid rgba(225, 225, 225, 0.1);
}

/* PROJECTS */
.projects {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 15px;
  margin-top: 50px;
}

.project {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 240px;
  width: 300px;
  padding: 20px;
  border-radius: 10px;
  transition: .3s ease-in-out;
}

.project:hover {
  background-color: rgba(225, 225, 225, 0.04);
  border-color: rgba(225, 225, 225, 0.2);
}

.project .arrow-up {
  color: rgba(225, 225, 225, 0.6);
  height: 25px;
  width: 25px;
  margin-left: auto;
}

.project .arrow-up:hover {
  transition: .3s ease-in-out;
  color: #f2f2f2;
}

/*SKILLS */
.skills {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 5px;
}

.skills p {
  margin: 0;
  padding: 10px 20px;
  border-radius: 5px;
  color: #f2f2f2;
}

/* FORM */
section * {
  margin: 0;
  padding: 0;
}

section {
  margin: 0 auto;
  width: 700px;
  padding: 20px 0;
  border-radius: 10px;
  text-align: center;
}

section p {
  margin: 5px 0 20px;
}

form input {
  height: 35px;
}

form input, form textarea {
  width: 400px;
  margin-bottom: 20px;
  padding-left: 10px;
  color: #f2f2f2;
  background-color: rgba(225, 225, 225, 0.02);
  border: 1px solid rgba(225, 225, 225, 0.1);
  border-radius: 7px;
}

form #firstname, form #lastname {
  width: 190px;
}

form #firstname {
  margin-right: 5px;
}

form textarea {
  height: 90px;
  padding-top: 10px;
  resize: none;
}

form input::selection, form textarea::selection {
  background-color: #f2f2f2;
  color: #131313;
}

form #submit {
  width: 410px;
  height: 40px;
  font-size: 15px;
  font-weight: bold;
  color: #222;
  background-color: #fff;
  border: 2px solid #fff;
  border-radius: 7px;
  transition: .3s ease-in-out;
}

form #submit:hover {
  color: #f2f2f2;
  background-color: transparent;
}

/* FOOTER */
footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  padding-top: 1.875em;
  border-top: .0625em solid #f2f2f2;
}

.footer-links img {
  width: 2.5em;
  height: 2.5em;
  margin: 0 .625em;
  padding: .3125em 0;
}

footer h3 {
  font-family: monospace;
}

/* CURSOR */
.cursor {
  position: fixed;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: #fff;
  mix-blend-mode: difference;
  transition: .1s;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 10;
}

/* COMPUTER RESPONSIVE */
@media (max-width: 1260px) {
  .text-div span {
    font-size: 4em;
  }
  .text-div p {
    font-size: 1.2em;
  }
  .picture-div img {
    width: 330px;
    height: 330px;
  }
  main {
    font-size: .875em;
  }
}

@media (max-width: 1020px) {
  .text-div span {
    font-size: 3.3em;
  }
  .text-div p {
    font-size: 1.1em;
  }
  .picture-div img {
    width: 280px;
    height: 280px;
  }
}

@media (max-width: 850px) {
  .main-info {
    text-align: center;
    margin-top: 8em;
  }
  .text-div span {
    font-size: 4em;
  }
  .text-div p {
    font-size: 1.2em;
  }
  .picture-div {
    display: none;
  }
  section {
    width: 420px;
    padding: 20px;
  }
} 

@media (max-width: 600px) {
  header {
    width: fit-content;
    padding: 0 2em;
  }
  .text-div span {
    font-size: 3em;
  }
  .text-div p {
    font-size: 1.1em;
  }
}

/* MOBILE RESPONSIVE */
@media (max-width: 30em) {
  header {
    width: fit-content;
    padding: 0 20px;
  }
  nav ul {
    gap: 35px;
  }
  nav a {
    font-size: 16px;
  }
  .main-info {
    margin-top: 128px;
  }
  .text-div {
    text-align: center;
  }
  .text-div span {
    font-size: 35px;
  }
  .text-div p {
    font-size: 10px;
  }
  .picture-div {
    display: none;
  }
  .project {
    height: 160px;
    width: 300px;
  }
  .project .arrow-up {
    height: 20px;
    width: 20px;
  }
  .project h2 {
    font-size: 20px;
    margin-top: 0;
    margin-bottom: 5px;
  }
  .project p {
    margin-bottom: 0;
  }
  section {
    width: 270px;
  }
  form input, form textarea {
    width: 250px;
  }
  form #firstname, form #lastname {
    width: 114.8px;
  }
  form #submit {
    width: 260px;
  }
}

@media (max-width: 26.25em) {
  header {
    width: fit-content;
    padding: 0 20px;
  }
  nav ul {
    gap: 30px;
  }
  nav a {
    font-size: 15px;
  }
  .text-div span {
    font-size: 30px;
  }
  main p {
    font-size: 14px;
  }
  main .about {
    font-size: 13px;
  }
  .project {
    width: 280px;
  }
}

